--- a/Customer_Churn.ipynb
+++ b/Customer_Churn.ipynb
@@ -1,8 +1,39 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Customer Churn Prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### In this project, we will predict whether a customer will leave the bank or not based on many factors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Following Factors are:\n",
+    "1. Credit score\n",
+    "2. Location of the Customer\n",
+    "3. Gender\n",
+    "4. Age\n",
+    "5. Tenure\n",
+    "6. Account Balance\n",
+    "7. Number of Bank Products Customer Uses\n",
+    "8. Has Credit Card\n",
+    "9. Is Active Member\n",
+    "10. Estimated Salary"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -14,7 +45,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26,26 +57,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importing the essential Libraries\n",
     "import pandas as pd\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Reading the Dataset\n",
     "df = pd.read_csv('Churn_Modelling.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +231,7 @@
        "4         79084.10       0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +251,7 @@
        "(10000, 14)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +274,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +308,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -302,6 +335,7 @@
     }
    ],
    "source": [
+    "# Printing Unique Values of the categorical variables\n",
     "print(df['Geography'].unique())\n",
     "print(df['Gender'].unique())\n",
     "print(df['NumOfProducts'].unique())\n",
@@ -311,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -334,18 +368,19 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Checking if there are null values or not\n",
     "df.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +566,7 @@
        "max      199992.480000      1.000000  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +730,7 @@
        "4         79084.10       0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,16 +741,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Including only Potential Predictors as independent varibles\n",
     "final_dataset = df[['CreditScore', 'Geography', 'Gender', 'Age', 'Tenure', 'Balance', 'NumOfProducts', 'HasCrCard', 'IsActiveMember', 'EstimatedSalary', 'Exited']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +879,7 @@
        "4          1               1         79084.10       0  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,16 +890,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Converting the categorical variables into numerical and avoiding Dummy Varibale Trap\n",
     "final_dataset = pd.get_dummies(final_dataset, drop_first=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +1041,7 @@
        "4                1            0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1015,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,16 +1061,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x29b06864ec8>"
+       "<seaborn.axisgrid.PairGrid at 0x19ac4021a88>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1056,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1066,16 +1103,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x29b0c6f8548>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x19ac8f60ac8>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1093,6 +1130,7 @@
     }
    ],
    "source": [
+    "# Plotting The Correlations between all the features\n",
     "corrmat = final_dataset.corr()\n",
     "top_corr_features = corrmat.index\n",
     "plt.figure(figsize=(20,20))\n",
@@ -1100,8 +1138,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the heatmap , we find that teh Age, Balance and the Geography of the Customer are Most important features"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1242,7 +1287,7 @@
        "4                1            0  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1253,19 +1298,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
+    "# Splitting the Dataset into Dependent and Independent Variables\n",
     "X = final_dataset.iloc[:, [0,1,2,3,4,5,6,7,9,10,11]]\n",
     "y = final_dataset.iloc[:, 8].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1400,7 +1446,7 @@
        "4            0  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1411,7 +1457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1420,7 +1466,7 @@
        "array([1, 0, 1, ..., 1, 1, 0], dtype=int64)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1431,17 +1477,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Splitting the dataset into Training and Testing Data\n",
     "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.2, random_state = 42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1454,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1483,7 +1530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1498,7 +1545,7 @@
        "                    random_state=None, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1512,15 +1559,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.12026329 0.2352232  0.10380691 0.12997515 0.1418602  0.03112516\n",
-      " 0.04653186 0.11831219 0.02850388 0.02134277 0.0230554 ]\n"
+      "[0.11900535 0.23591729 0.10360796 0.13050623 0.14081791 0.03094091\n",
+      " 0.04559959 0.12012907 0.02909057 0.0213258  0.02305932]\n"
      ]
     }
    ],
@@ -1537,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1553,7 +1600,7 @@
        "                       verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1566,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1575,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1583,8 +1630,8 @@
      "output_type": "stream",
      "text": [
       "[[1548   59]\n",
-      " [ 204  189]]\n",
-      "0.8685\n"
+      " [ 201  192]]\n",
+      "0.87\n"
      ]
     }
    ],
@@ -1597,14 +1644,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# pickling the Model\n",
     "import pickle\n",
     "file = open('Customer_Churn_Prediction.pkl', 'wb')\n",
     "pickle.dump(rf, file)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
